OESE-262 fix spacing issue on resource page

--- a/css/nalrc.css
+++ b/css/nalrc.css
@@ -212,7 +212,7 @@
     margin-left: 1%;
     z-index:2;
 }
-.nalrc-main #sngl-resource .nalrc-resource-details { display:inline; }
+.nalrc-main #sngl-resource .nalrc-resource-details { display:inline;  white-space: normal; }
 .nalrc-main #sngl-resource .nalrc-resource-details .nalrc-resource-desc { margin-top:-25px; }
 .nalrc-main #sngl-resource .oer-subject-resources-list .post.oer-snglrsrc .tagcloud span a { color: #FFFFFF !important; text-decoration: none; }
 .nalrc-main #sngl-resource .oer-subject-resources-list .post.oer-snglrsrc .tagcloud span a:hover { color:#414141; }
